<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".MainActivity"
        xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
            android:id="@+id/info"
            android:hint="@string/student_info"
            android:textColorHint="@color/black"
            android:textColor="@color/white"
            android:background="@color/grey"
            android:autofillHints="Student Info"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/Name"/>

    <EditText
            android:id="@+id/Name"
            android:inputType="text"
            android:textSize="20sp"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:autofillHints="Name"
            android:hint="@string/name"
            android:textColor="@color/white"
            android:textColorHint="#757575"
            android:backgroundTint="#757575"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/LastName"/>

    <EditText
            android:id="@+id/LastName"
            android:inputType="text"
            android:textSize="20sp"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:autofillHints="Last Name"
            android:hint="@string/last_name"
            android:textColor="@color/white"
            android:textColorHint="#757575"
            android:backgroundTint="#757575"
            app:layout_constraintTop_toBottomOf="@+id/Name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/ID"/>

    <EditText
            android:id="@+id/ID"
            android:inputType="text"
            android:textSize="20sp"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:autofillHints="Student ID"
            android:hint="@string/student_id"
            android:textColor="@color/white"
            android:textColorHint="#757575"
            android:backgroundTint="#757575"
            app:layout_constraintTop_toBottomOf="@+id/LastName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/delete"/>

    <Button
            android:id="@+id/add"
            android:text="@string/add"
            android:backgroundTint="@color/orange"
            android:textColor="@color/black"
            android:layout_width="120dp"
            android:layout_height="75dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ID"
            app:layout_constraintEnd_toStartOf="@+id/delete"
            app:layout_constraintBottom_toTopOf="@+id/edit"/>

    <Button
            android:id="@+id/delete"
            android:text="@string/delete"
            android:backgroundTint="@color/orange"
            android:textColor="@color/black"
            android:layout_width="120dp"
            android:layout_height="75dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/ID"
            app:layout_constraintStart_toEndOf="@+id/add"
            app:layout_constraintEnd_toStartOf="@+id/search"
            app:layout_constraintBottom_toTopOf="@+id/edit"/>

    <Button
            android:id="@+id/search"
            android:text="@string/search"
            android:backgroundTint="@color/orange"
            android:textColor="@color/black"
            android:layout_width="120dp"
            android:layout_height="75dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toEndOf="@+id/delete"
            app:layout_constraintTop_toBottomOf="@+id/ID"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/display"/>

    <Button
            android:id="@+id/edit"
            android:text="@string/edit"
            android:backgroundTint="@color/orange"
            android:textColor="@color/black"
            android:layout_width="125dp"
            android:layout_height="75dp"
            android:layout_marginBottom="125dp"
            app:layout_constraintTop_toBottomOf="@+id/add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/display"
            app:layout_constraintBottom_toBottomOf="parent" />

    <Button
            android:id="@+id/display"
            android:text="@string/display_all"
            android:backgroundTint="@color/orange"
            android:textColor="@color/black"
            android:layout_width="125dp"
            android:layout_height="75dp"
            android:layout_marginBottom="125dp"
            app:layout_constraintTop_toBottomOf="@+id/search"
            app:layout_constraintStart_toEndOf="@+id/edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>